--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --code-coverage",
     "test_pipeline": "ng test --watch=false --code-coverage --browsers=ChromeHeadless"
   },
   "private": true,
